--- a/examples/individual-repo-workflows/ci.yml
+++ b/examples/individual-repo-workflows/ci.yml
@@ -46,26 +46,6 @@ on:
         type: string
         required: false
         default: "npm"
-      test_command:
-        description: "Command to run tests"
-        type: string
-        required: false
-        default: "npm test"
-      build_command:
-        description: "Command to build package"
-        type: string
-        required: false
-        default: "npm run build:ci"
-      skip_performance_tests:
-        description: "Skip performance tests during CI"
-        type: boolean
-        required: false
-        default: false
-      skip_matrix_tests:
-        description: "Skip matrix testing (use single node version only)"
-        type: boolean
-        required: false
-        default: false
 
 jobs:
   ci:
@@ -78,10 +58,10 @@ jobs:
       min_node_version: ${{ github.event.inputs.min_node_version || '20' }}
       max_node_major: ${{ github.event.inputs.max_node_major || '22' }}
       package_manager: ${{ github.event.inputs.package_manager || 'npm' }}
-      test_command: ${{ github.event.inputs.test_command || 'npm test' }}
-      build_command: ${{ github.event.inputs.build_command || 'npm run build:ci' }}
-      skip_performance_tests: ${{ github.event.inputs.skip_performance_tests || false }}
-      skip_matrix_tests: ${{ github.event.inputs.skip_matrix_tests || false }}
+      test_command: "npm test"
+      build_command: "npm run build:ci"
+      skip_performance_tests: false
+      skip_matrix_tests: false
 
     # Authentication & Bot Configuration
     # The workflow supports automatic App token detection for enhanced permissions and proper attribution:
