refactor(git): add GITHUB_TOKEN to environment for tag updates

--- a/.github/actions/git/steps/update-major-version-tags/action.yml
+++ b/.github/actions/git/steps/update-major-version-tags/action.yml
@@ -73,6 +73,8 @@ runs:
     - name: Update tags with proper signing
       if: ${{ steps.update.outputs.updated == 'true' }}
       uses: CLDMV/.github/.github/actions/github/api/tag/upsert-batch@v1
+      env:
+        GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
       with:
         debug: ${{ inputs.debug }}
         payload: ${{ steps.update.outputs.tags-payload }}
