refactor(git): update GITHUB_TOKEN handling in tag operations

--- a/.github/actions/git/jobs/update-major-version-tags/action.yml
+++ b/.github/actions/git/jobs/update-major-version-tags/action.yml
@@ -153,10 +153,9 @@ runs:
       id: update-tags
       if: steps.should-run.outputs.result == 'true'
       uses: CLDMV/.github/.github/actions/git/steps/update-major-version-tags@v1
-      env:
-        GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
       with:
         debug: ${{ inputs.debug }}
+        github_token: ${{ env.GITHUB_TOKEN }}
         gpg_enabled: ${{ inputs.gpg_enabled }}
         tag-name: ${{ steps.get-tag.outputs.tag-name }}
 
