--- a/.github/actions/git/steps/update-major-version-tags/action.yml
+++ b/.github/actions/git/steps/update-major-version-tags/action.yml
@@ -6,6 +6,9 @@ inputs:
     description: "Enable debug logging"
     required: false
     default: "false"
+  github_token:
+    description: "GitHub token for API access (defaults to github.token)"
+    required: false
   gpg_enabled:
     description: "Whether GPG signing should be used (auto-detected from workflow)"
     required: false
@@ -74,7 +77,7 @@ runs:
       if: ${{ steps.update.outputs.updated == 'true' }}
       uses: CLDMV/.github/.github/actions/github/api/tag/upsert-batch@v1
       env:
-        GITHUB_TOKEN: ${{ env.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ inputs.github_token || github.token }}
       with:
         debug: ${{ inputs.debug }}
         payload: ${{ steps.update.outputs.tags-payload }}
