--- a/.github/workflows/reusable-publishing.yml
+++ b/.github/workflows/reusable-publishing.yml
@@ -33,6 +33,11 @@ on:
         required: false
         type: boolean
         default: false
+      run_create_release:
+        description: "Run create GitHub release job (after publishing)"
+        required: false
+        type: boolean
+        default: false
 
       # Build parameters
       node_version:
@@ -65,9 +70,51 @@ on:
         type: string
         default: ""
 
+      # Release parameters (for create-release job)
+      is_prerelease:
+        description: "Whether this is a prerelease"
+        required: false
+        type: boolean
+        default: false
+      release_source_only:
+        description: "Whether to create source-only release (no package assets)"
+        required: false
+        type: boolean
+        default: false
+      build_command:
+        description: "Command to build package for release"
+        required: false
+        type: string
+        default: "npm run build:ci"
+
+      # GPG signing control
+      use_gpg:
+        description: "If true, use GPG signing for release tags"
+        required: false
+        type: boolean
+        default: false
+
     secrets:
       NPM_TOKEN:
         description: "NPM token for publishing packages"
+        required: false
+      BOT_APP_ID:
+        description: "GitHub App ID for CLDMV bot"
+        required: false
+      BOT_APP_PRIVATE_KEY:
+        description: "GitHub App private key for CLDMV bot"
+        required: false
+      TAGGER_NAME:
+        description: "GPG tagger name for signing"
+        required: false
+      TAGGER_EMAIL:
+        description: "GPG tagger email for signing"
+        required: false
+      GPG_PRIVATE_KEY:
+        description: "ASCII-armored private key for signing"
+        required: false
+      GPG_PASSPHRASE:
+        description: "Passphrase for the private key (if protected)"
         required: false
 
     outputs:
@@ -89,6 +136,11 @@ on:
       github-packages-published:
         description: "Whether the package was published to GitHub Packages"
         value: ${{ jobs.publish-github-packages.outputs.published }}
+
+      # Release outputs
+      release-id:
+        description: "The ID of the created GitHub release"
+        value: ${{ jobs.create-release.outputs.release-id }}
 
 jobs:
   detect-repo-config:
@@ -182,3 +234,40 @@ jobs:
           publish-command: ${{ inputs.publish_command_github_packages }}
           github-token: ${{ github.token }}
           artifact-name: ${{ steps.names.outputs.artifact-name }}
+
+  create-release:
+    name: "📋 Create GitHub Release"
+    if: inputs.run_create_release == true && always() && (needs.publish-npm.result == 'success' || needs.publish-github-packages.result == 'success')
+    runs-on: ubuntu-latest
+    needs: [publish-npm, publish-github-packages]
+    outputs:
+      release-id: ${{ steps.create.outputs.release-id }}
+    steps:
+      - name: Create App token (auto-detect)
+        id: app-token
+        uses: CLDMV/.github/.github/actions/github/steps/create-app-token@v1
+        with:
+          app_id: ${{ secrets.BOT_APP_ID }}
+          private_key: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+        env:
+          BOT_APP_ID: ${{ secrets.BOT_APP_ID }}
+          BOT_APP_PRIVATE_KEY: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+
+      - name: Create GitHub Release
+        id: create
+        uses: CLDMV/.github/.github/actions/github/jobs/create-release@v1
+        with:
+          version: ${{ inputs.version }}
+          package-name: ${{ inputs.package_name }}
+          is-prerelease: ${{ inputs.is_prerelease }}
+          package-manager: ${{ inputs.package_manager }}
+          release-source-only: ${{ inputs.release_source_only }}
+          node-version: ${{ inputs.node_version }}
+          build-command: ${{ inputs.build_command }}
+          github-token: ${{ steps.app-token.outputs.token }}
+          # GPG signing parameters
+          gpg_enabled: ${{ inputs.use_gpg }}
+          tagger_name: ${{ secrets.TAGGER_NAME }}
+          tagger_email: ${{ secrets.TAGGER_EMAIL }}
+          gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg_passphrase: ${{ secrets.GPG_PASSPHRASE }}
