--- a/.github/workflows/workflow-publish.yml
+++ b/.github/workflows/workflow-publish.yml
@@ -204,13 +204,30 @@ jobs:
     with:
       package_name: ${{ inputs.package_name }}
       debug: ${{ inputs.debug }}
+      # Job control flags - enable the jobs we want to run
+      run_detect_repo_config: true
+      run_publish_npm: ${{ inputs.publish_to_npm }}
+      run_publish_github_packages: ${{ inputs.publish_to_github_packages }}
+      run_create_release: true  # Create GitHub release after publishing
+      # Build parameters
       node_version: ${{ inputs.node_version }}
       package_manager: ${{ inputs.package_manager }}
       version: ${{ inputs.version }}
       publish_command_npm: ${{ inputs.publish_command }}
       publish_command_github_packages: ${{ inputs.github_packages_publish_command }}
+      # Release parameters
+      is_prerelease: ${{ inputs.is_prerelease }}
+      release_source_only: ${{ inputs.release_source_only }}
+      build_command: ${{ inputs.build_command }}
+      use_gpg: ${{ inputs.use_gpg }}
     secrets:
       NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+      BOT_APP_ID: ${{ secrets.BOT_APP_ID }}
+      BOT_APP_PRIVATE_KEY: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+      TAGGER_NAME: ${{ secrets.TAGGER_NAME }}
+      TAGGER_EMAIL: ${{ secrets.TAGGER_EMAIL }}
+      GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
+      GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
 
   summary:
     name: "📋 Publish Summary"
