--- a/.github/workflows/workflow-release.yml
+++ b/.github/workflows/workflow-release.yml
@@ -127,6 +127,7 @@ jobs:
     with:
       package_name: ${{ inputs.package_name }}
       debug: ${{ inputs.debug }}
+      run_build_and_test: true
       node_version: ${{ inputs.node_version }}
       min_node_version: ${{ inputs.min_node_version }}
       max_node_major: ${{ inputs.max_node_major }}
