--- a/examples/individual-repo-workflows/release.yml
+++ b/examples/individual-repo-workflows/release.yml
@@ -76,7 +76,7 @@ jobs:
     uses: CLDMV/.github/.github/workflows/workflow-release.yml@v1
     with:
       package_name: "@cldmv/slothlet" # Required: Your NPM package name
-      debug: ${{ github.event.inputs.debug || false }}
+      debug: ${{ github.event.inputs.debug == 'true' }}
       node_version: ${{ github.event.inputs.node_version || 'lts/*' }}
       min_node_version: ${{ github.event.inputs.min_node_version || '20' }}
       max_node_major: ${{ github.event.inputs.max_node_major || '22' }}
@@ -85,12 +85,12 @@ jobs:
       build_command: "npm run build:ci"
       version_bump: ${{ github.event.inputs.version_bump || '' }}
       version: ${{ github.event.inputs.version || '' }}
-      is_prerelease: ${{ github.event.inputs.is_prerelease || false }}
+      is_prerelease: ${{ github.event.inputs.is_prerelease == 'true' }}
       release_source_only: false
-      create_documentation: ${{ github.event.inputs.create_documentation || true }}
+      create_documentation: ${{ github.event.inputs.create_documentation != 'false' }}
       skip_performance_tests: false
       skip_matrix_tests: false
-      use_gpg: ${{ github.event.inputs.use_gpg || false }}
+      use_gpg: ${{ github.event.inputs.use_gpg == 'true' }}
 
     # Authentication & Bot Configuration
     # The workflow supports automatic App token detection for enhanced permissions and proper attribution:
