--- a/.github/workflows/reusable-tag-health.yml
+++ b/.github/workflows/reusable-tag-health.yml
@@ -174,11 +174,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: Setup Git identity
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-
       - name: Create App token (auto-detect)
         id: app-token
         uses: CLDMV/.github/.github/actions/github/steps/create-app-token@v1
@@ -188,6 +183,32 @@ jobs:
         env:
           BOT_APP_ID: ${{ secrets.BOT_APP_ID }}
           BOT_APP_PRIVATE_KEY: ${{ secrets.BOT_APP_PRIVATE_KEY }}
+
+      - name: Debug - Dump app-token outputs
+        if: inputs.debug == true
+        run: |
+          echo "🔍 DEBUG: app-token step outputs:"
+          echo '${{ toJSON(steps.app-token.outputs) }}' | jq .
+          echo "  token: ${{ steps.app-token.outputs.token && '[REDACTED - Present]' || '[MISSING]' }}"
+          echo "  app-slug: ${{ steps.app-token.outputs.app-slug }}"
+          echo "  installation-id: ${{ steps.app-token.outputs.installation-id }}"
+          echo "  repository-selection: ${{ steps.app-token.outputs.repository-selection }}"
+          echo ""
+          echo "🔍 DEBUG: Testing token permissions with GitHub API:"
+          gh api /user --silent && echo "  ✅ Token has basic API access" || echo "  ❌ Token lacks basic API access"
+          gh api /repos/${{ github.repository }} --silent && echo "  ✅ Token can read repository" || echo "  ❌ Token cannot read repository"
+          gh api /repos/${{ github.repository }}/actions/workflows --silent && echo "  ✅ Token can read workflows" || echo "  ❌ Token cannot read workflows"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+
+      - name: Get GitHub App User ID & Setup Git identity
+        id: get-user-id
+        run: echo "user-id=$(gh api "/users/${{ steps.app-token.outputs.app-slug }}[bot]" --jq .id)" >> "$GITHUB_OUTPUT"
+        env:
+          GH_TOKEN: ${{ steps.app-token.outputs.token }}
+      - run: |
+          git config --global user.name '${{ steps.app-token.outputs.app-slug }}[bot]'
+          git config --global user.email '${{ steps.get-user-id.outputs.user-id }}+${{ steps.app-token.outputs.app-slug }}[bot]@users.noreply.github.com'
 
   unified-update-major-minor:
     name: "🏷️ Update Major/Minor Tags"
