--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -4,10 +4,7 @@ name: 🏷️ Update Major Version Tags
 on:
   release:
     types: [published]
-  push:
-    branches:
-      - main
-      - master
+  push:  # Allow all pushes (branches and tags)
 
   workflow_dispatch:
     inputs:
@@ -54,6 +51,9 @@ on:
 
 jobs:
   update-tags:
+    if: >
+      (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') ||
+      (startsWith(github.ref, 'refs/tags/v') && (github.event.base_ref == 'refs/heads/main' || github.event.base_ref == 'refs/heads/master'))
     uses: ./.github/workflows/workflow-update-major-version-tags.yml
     with:
       debug: ${{ github.event.inputs.debug == 'true' }}
