feat(api): add revoke-app-token action for GitHub App token management

--- a/.github/actions/github/steps/create-app-token/action.yml
+++ b/.github/actions/github/steps/create-app-token/action.yml
@@ -53,5 +53,6 @@ runs:
         app-id: ${{ inputs.app_id || env.BOT_APP_ID }}
         private-key: ${{ inputs.private_key || env.BOT_APP_PRIVATE_KEY }}
         owner: ${{ inputs.owner }}
+        skip-token-revoke: true # Don't revoke token - needed for multi-job workflows
         # permission-contents: write
         # permission-workflows: write
