--- a/.github/workflows/local-update-major-version-tags.yml
+++ b/.github/workflows/local-update-major-version-tags.yml
@@ -53,7 +53,7 @@ jobs:
   update-tags:
     if: >
       (github.ref == 'refs/heads/main' || github.ref == 'refs/heads/master') ||
-      (startsWith(github.ref, 'refs/tags/v') && (github.event.base_ref == 'refs/heads/main' || github.event.base_ref == 'refs/heads/master'))
+      startsWith(github.ref, 'refs/tags/v')
     uses: ./.github/workflows/workflow-update-major-version-tags.yml
     with:
       debug: ${{ github.event.inputs.debug == 'true' }}
