--- a/.github/workflows/reusable-tag-health.yml
+++ b/.github/workflows/reusable-tag-health.yml
@@ -135,10 +135,76 @@ on:
         value: ${{ jobs.unified-summarize-results.outputs.processing_summary }}
 
 jobs:
+  # Validate that tag commits are reachable from main/master
+  validate-tag-source:
+    name: "🔍 Validate Tag Source"
+    runs-on: ubuntu-latest
+    outputs:
+      should-proceed: ${{ steps.validate.outputs.should-proceed }}
+      validation-message: ${{ steps.validate.outputs.message }}
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # Need full history to check commit ancestry
+
+      - name: Validate tag source branch
+        id: validate
+        run: |
+          # If not a tag push, always proceed
+          if [[ ! "$GITHUB_REF" =~ ^refs/tags/ ]]; then
+            echo "should-proceed=true" >> $GITHUB_OUTPUT
+            echo "message=Not a tag push, proceeding normally" >> $GITHUB_OUTPUT
+            echo "🟢 Not a tag push, proceeding with workflow"
+            exit 0
+          fi
+
+          # Extract tag name from ref
+          TAG_NAME="${GITHUB_REF#refs/tags/}"
+          echo "🏷️ Validating tag: $TAG_NAME"
+
+          # Get the commit that the tag points to
+          TAG_COMMIT=$(git rev-list -n 1 "$TAG_NAME")
+          echo "📍 Tag points to commit: $TAG_COMMIT"
+
+          # Check if this commit is reachable from main or master
+          MAIN_EXISTS=$(git show-ref --verify --quiet refs/heads/main && echo "true" || echo "false")
+          MASTER_EXISTS=$(git show-ref --verify --quiet refs/heads/master && echo "true" || echo "false")
+
+          REACHABLE_FROM_MAIN="false"
+          REACHABLE_FROM_MASTER="false"
+
+          if [[ "$MAIN_EXISTS" == "true" ]]; then
+            if git merge-base --is-ancestor "$TAG_COMMIT" "origin/main" 2>/dev/null; then
+              REACHABLE_FROM_MAIN="true"
+              echo "✅ Tag commit is reachable from main branch"
+            fi
+          fi
+
+          if [[ "$MASTER_EXISTS" == "true" ]]; then
+            if git merge-base --is-ancestor "$TAG_COMMIT" "origin/master" 2>/dev/null; then
+              REACHABLE_FROM_MASTER="true"
+              echo "✅ Tag commit is reachable from master branch"
+            fi
+          fi
+
+          # Determine if we should proceed
+          if [[ "$REACHABLE_FROM_MAIN" == "true" || "$REACHABLE_FROM_MASTER" == "true" ]]; then
+            echo "should-proceed=true" >> $GITHUB_OUTPUT
+            echo "message=Tag $TAG_NAME is reachable from main/master branch" >> $GITHUB_OUTPUT
+            echo "🟢 Validation passed: Tag is from main/master branch"
+          else
+            echo "should-proceed=false" >> $GITHUB_OUTPUT
+            echo "message=Tag $TAG_NAME is not reachable from main/master branch" >> $GITHUB_OUTPUT
+            echo "🟡 Validation failed: Tag is not from main/master branch, skipping major version tag updates"
+          fi
+
   # Auto-detect GPG capability once at the beginning
   detect-gpg:
     name: "🔐 Detect GPG Capability"
     runs-on: ubuntu-latest
+    needs: [validate-tag-source]
+    if: needs.validate-tag-source.outputs.should-proceed == 'true'
     outputs:
       gpg-enabled: ${{ steps.detect.outputs.gpg-enabled }}
     steps:
@@ -277,7 +343,7 @@ jobs:
 
   unified-fix-bot-signatures:
     name: "🤖 Fix Bot Signatures"
-    if: inputs.run_unified_tag_health == true
+    if: inputs.run_unified_tag_health == true && always() && needs.setup-shared.result == 'success'
     needs: [detect-gpg, setup-shared, unified-update-major-minor]
     runs-on: ubuntu-latest
     permissions:
@@ -319,7 +385,7 @@ jobs:
 
   unified-fix-unsigned-tags:
     name: "🔏 Fix Unsigned Tags"
-    if: inputs.run_unified_tag_health == true
+    if: inputs.run_unified_tag_health == true && always() && needs.setup-shared.result == 'success'
     needs: [detect-gpg, setup-shared, unified-fix-bot-signatures]
     runs-on: ubuntu-latest
     permissions:
@@ -361,7 +427,7 @@ jobs:
 
   unified-fix-orphaned-tags:
     name: "🔗 Fix Orphaned Tags"
-    if: inputs.run_unified_tag_health == true
+    if: inputs.run_unified_tag_health == true && always() && needs.setup-shared.result == 'success'
     needs: [detect-gpg, setup-shared, unified-fix-unsigned-tags]
     runs-on: ubuntu-latest
     permissions:
@@ -403,7 +469,7 @@ jobs:
 
   unified-summarize-results:
     name: "📊 Summarize Results"
-    if: inputs.run_unified_tag_health == true
+    if: inputs.run_unified_tag_health == true && always()
     needs:
       [
         detect-gpg,
@@ -449,7 +515,7 @@ jobs:
           exclude_patterns: ${{ inputs.exclude_patterns }}
 
       - name: Revoke App token
-        if: needs.setup-shared.outputs.auth-token != ''
+        if: always() && needs.setup-shared.outputs.auth-token != ''
         id: revoke-token
         uses: CLDMV/.github/.github/actions/github/api/revoke-app-token@v1
         with:
